<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Sparkles IDE</string>
  <string name="com_word_settings">Settings</string>
  <string name="set_main">Application Settings</string>
  <string name="set_main_desc">Some of Sparkles Apperance settings</string>
  <string name="common_word_allow">Allow</string>
  <string name="common_word_deny">Deny</string>
  <string name="set_editor">Code Editor</string>
  <string name="set_editor_desc">Modify the Style of The Editor</string>
  <string name="set_terminal">Terminal</string>
  <string name="set_terminal_desc">Styling the Terminal</string>
  <string name="set_lib">Third Party Software</string>
  <string name="set_lib_desc">Libraries And Softwares used in Sparkles</string>
  <string name="com_word_about">About</string>
  <string name="set_about_desc">About Sparkles</string>
  <string name="about_team">Team</string>
  <string name="about_tag_translator">Translator</string>
  <string name="about_tag_developer">Developer</string>
  <string name="tooltip_settings">Settings</string>
  <string name="tooltip_terminal">Open terminal</string>
  <string name="tooltip_new_file">New File</string>
  <string name="tooltip_search">Search in code</string>
 <!--Appearance Settings-->
  <string name="monet_title">Use Dynamic Colors</string>
  <string name="monet_desc">Use your device color palette instead black and white</string>
  <string name="amoled_title">Night theme</string>
  <string name="amoled_desc">Amoled Blackish theme</string>
  <string name="need_restart">Need Restart</string>

  <!--TEAM BIO-->

  <string name="syntaxspin_phrase">A Material You Lover Android/Web Developer</string>
  <string name="yamenher_phrase">A Kool Utilities maker</string>
  <string name="trindadedev_phrase">I use Jetpack Compose, btw</string>
  <string name="hanzo_phrase">Ghost</string>
  <string name="thiarley_rocha_phrase">lets play minecraft?</string>
  <string name="rohit_kushvaha_phrase">Idk</string>
  <string name="neoapps_phrase">i use arch, btw</string>
  <string name="jaiel_lima_phrase">Happy is the man that finds wisdom, and the man that gets understanding. \n\n Proverbs 3:13</string>
  <string name="alex_phrase">PaxSenix bootlegger</string>
  <string name="vivek_phrase">Some people hurt you and act like you hurt them</string>
  <string name="art_phrase">Turning codes into life changing stories✨️</string>
  <string name="nex_phrase">An old fashioned guy among trendy</string>


  <string name="common_word_result">Result</string>
  <string name="common_word_ok">Ok</string>
  <string name="common_word_copy">Copy</string>
  
  <!--new settings Strings-->
  <string name="apper_uimode">Set Ui Mode:</string>
  <!--Code editor settings , avoid using long sentences-->
  <string name="editor_theme">Editor Theme</string>
  <string name="editor_theme_desc">Choose Sora Editor Theme</string>
  <string name="editor_wordwrap">WordWrap</string>
  <string name="editor_wordwrap_desc">Enable WordWrap of Sora</string>
  <string name="editor_fl">Show First Line Number</string>
  <string name="editor_fl_desc">Show or hide the first line Number</string>
  <string name="editor_overscroll">OverScroll</string>
  <string name="editor_overscroll_desc">Enable OverScroll of Sora</string>
  <string name="editor_ln">Show Line Numbers</string>
  <string name="editor_ln_desc">Show or hide the line numbers</string>
  <string name="editor_toolbar">Show Toolbar</string>
  <string name="editor_toolbar_desc">Show or hide the Toolbar</string>
  <string name="editor_tab">Tabs (Not Currently available)</string>
  <string name="editor_tab_desc">Use tabs mode on Sparkles</string>
  <string name="editor_title">Formatting</string>
  <string name="editor_theme_title">Sora Editor Theme</string>
  
</resources>